Updating styles with indents

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="page-wrapper">
-    <!-- ЛІва колонка -->
+    <!-- left side -->
   <div class="left-side">
       <figure>
-      <img src="men_work.jpg" alt="my Photo" class="Profile_photo">
+      <img src="men_work.jpg" alt="my photo" class="profile_photo">
       </figure>
       <div class="personal-data">
       <h2>Особисті дані</h2>
@@ -45,7 +45,7 @@
       <p>Англійська - B2</p>
     </div>
     </div>
-    <!-- Права колонка -->
+    <!-- right side -->
     <div class="right-side">
       <h1>БУСІВ АНДРІЙ</h1>
       <div class="work experience">
