Додав нові посилання до розділу 'Мої роботи'

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
       <h2>Мої роботи</h2>
       <p>
       <a href="https://andriibus.github.io/My_WebSite/" target="_blank">Мій персональний сайт
+      </a> 
+      <br>
+      <a href="https://andriibus.github.io/task_orange/" target="_blank">Завдання Orange
+      </a> <br>
+      <a href="https://andriibus.github.io/task_mriya/" target="_blank">Завдання Мрія
+      </a> <br>
+      <a href="https://andriibus.github.io/task_chess-board/" target="_blank">Завдання шахова дошка
       </a>
       </p>
       </div>
