--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       <a href="https://andriibus.github.io/task_mriya/" target="_blank">Завдання Мрія
       </a> <br>
       <a href="https://andriibus.github.io/task_chess-board/" target="_blank">Завдання шахова дошка
-      </a>
+      </a> <br>
+      <a href="https://andriibus.github.io/burger_menu/" target="_blank">Завдання Бургер меню</a>
       </p>
       </div>
     </div>
