--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
       </div>
       <div class="languages">
       <h2>Мови</h2>
-      <p>Українська - рідна</p>
-      <p>Англійська - B2</p>
+      <div class="language-item">
+        <span class="language-name">Українська</span>
+        <span class="language-level">рідна</span>
+      </div>
+      <div class="language-item">
+        <span class="language-name">Англійська</span>
+        <span class="language-level">B2</span>
+      </div>
     </div>
     </div>
     <!-- right side -->
@@ -95,16 +101,10 @@
       <div class="my works">
       <h2>Мої роботи</h2>
       <p>
-      <a href="https://andriibus.github.io/My_WebSite/" target="_blank">Мій персональний сайт
-      </a> 
-      <br>
-      <a href="https://andriibus.github.io/task_orange/" target="_blank">Завдання Orange
-      </a> <br>
-      <a href="https://andriibus.github.io/task_mriya/" target="_blank">Завдання Мрія
-      </a> <br>
-      <a href="https://andriibus.github.io/task_chess-board/" target="_blank">Завдання шахова дошка
-      </a> <br>
-      <a href="https://andriibus.github.io/burger_menu/" target="_blank">Завдання Бургер меню</a>
+        <a href="task-orange">task orange</a>
+        <a href="task-mriya">task mriya</a>
+        <a href="task-chesboard">task chesboard</a>
+        <a href="menu_test">menu test</a>
       </p>
       </div>
     </div>
